[package]
name                 = "malachite-cli"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
malachite-common.workspace        = true
malachite-metrics.workspace       = true
malachite-node.workspace          = true

# Starknet
malachite-starknet-host.workspace  = true
malachite-starknet-app.workspace  = true

axum               = { workspace = true }
bytesize           = { workspace = true }
clap               = { workspace = true, features = ["derive", "env"] }
color-eyre         = { workspace = true }
config             = { workspace = true }
directories        = { workspace = true }
itertools          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
serde_json         = { workspace = true }
rand               = { workspace = true }
toml               = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true, features = ["background_threads"] }

[dev-dependencies]
tempfile           = { workspace = true }
