[package]
name = "informalsystems-malachitebft-codec"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes.workspace = true

[lints]
workspace = true
