[package]
name        = "malachite-common"
description = "Common datatypes and interfaces for the Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[features]
proto = ["dep:prost", "dep:prost-types", "dep:prost-build"]

[dependencies]
malachite-proto.workspace = true

derive-where.workspace = true
signature.workspace    = true

prost       = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

[build-dependencies]
prost-build = { workspace = true, optional = true }
