[package]
name        = "malachite-common"
description = "Common datatypes and interfaces for the Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true, default-features = false }
derive-where = { workspace = true }
