[package]
name                   = "malachite-consensus"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[features]
std = []
debug = ["std", "malachite-core-driver/debug"]

[dependencies]
malachite-core-types.workspace  = true
malachite-core-driver.workspace  = true
malachite-metrics.workspace = true
malachite-peer.workspace    = true

async-recursion = { workspace = true }
genawaiter      = { workspace = true }
derive-where    = { workspace = true }
multiaddr       = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
malachite-test = { workspace = true }
