[package]
name = "informalsystems-malachitebft-core-consensus"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
std = []
debug = ["std", "malachitebft-core-driver/debug"]

[dependencies]
malachitebft-core-types.workspace = true
malachitebft-core-driver.workspace = true
malachitebft-metrics.workspace = true
malachitebft-peer.workspace = true

async-recursion = { workspace = true }
genawaiter = { workspace = true }
derive-where = { workspace = true }
multiaddr = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
malachitebft-test = { workspace = true }
