[package]
name = "arc-malachitebft-core-state-machine"
description = "Core state-machine for the Malachite BFT consensus engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
malachitebft-core-types = { workspace = true }

derive-where = { workspace = true }
displaydoc = { workspace = true }
time = { workspace = true, optional = true }

[features]
std = []
debug = ["std", "dep:time"]
