[package]
name = "informalsystems-malachitebft-core-types"
description = "Core type definitions and interfaces for the Malachite BFT consensus engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true, default-features = false }
derive-where = { workspace = true }
thiserror = { workspace = true, default-features = false }
