[package]
name = "informalsystems-malachitebft-core-types"
description = "Core type definitions and interfaces for the Malachite BFT consensus engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
serde = ["dep:serde"]
borsh = ["dep:borsh"]

[dependencies]
malachitebft-peer = { workspace = true, default-features = false }
borsh = { workspace = true, optional = true }
bytes = { workspace = true, default-features = false }
derive-where = { workspace = true }
thiserror = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
